Update: Improve caching strategy and monitoring features

--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,54 @@
 # Server Configuration
-PORT=3000
 NODE_ENV=development
-
-# Security
-JWT_SECRET=your-jwt-secret-key
-JWT_REFRESH_SECRET=your-jwt-refresh-secret-key
-JWT_EXPIRES_IN=15m
-JWT_REFRESH_EXPIRES_IN=7d
-ENCRYPTION_KEY=your-encryption-key
+PORT=3000
 
 # Redis Configuration
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=your-redis-password
+REDIS_PASSWORD=
+REDIS_DB=0
+REDIS_URL=redis://localhost:6379
+CACHE_ENGINE=redis
+CACHE_TTL=3600
+
+# Airtable Configuration
+AIRTABLE_API_KEY=your_airtable_api_key
+AIRTABLE_BASE_ID=your_airtable_base_id
+
+# Authentication
+JWT_SECRET=your_jwt_secret_key
+JWT_REFRESH_SECRET=your_jwt_refresh_secret_key
+JWT_EXPIRES_IN=15m
+JWT_REFRESH_EXPIRES_IN=7d
+
+# CORS Configuration
+ALLOWED_ORIGINS=http://localhost:3000,https://your-production-domain.com
+
+# Logging
+LOG_LEVEL=info
+
+# External Services
+LANDBOT_API_KEY=your_landbot_api_key
+OPENAI_API_KEY=your_openai_api_key
+
+# Google Analytics
+GA_MEASUREMENT_ID=your_ga_measurement_id
+
+# Security
+ENCRYPTION_KEY=your-encryption-key
+
+# Redis Configuration
 REDIS_DB=0
 CACHE_ENGINE=redis
 CACHE_TTL=3600
 
 # Airtable Configuration
-AIRTABLE_API_KEY=your-airtable-api-key
-AIRTABLE_BASE_ID=your-airtable-base-id
 AIRTABLE_USERS_TABLE=Users
 AIRTABLE_ACTIVITIES_TABLE=Activities
 AIRTABLE_PRODUCTS_TABLE=Products
 AIRTABLE_ANALYTICS_TABLE=Analytics
 
 # OpenAI Configuration
-OPENAI_API_KEY=your-openai-api-key
 OPENAI_MODEL=gpt-4
 OPENAI_MAX_TOKENS=2000
 OPENAI_TEMPERATURE=0.7
@@ -52,17 +74,11 @@ CO2_RATE_LIMIT_WINDOW_MS=3600000
 CO2_RATE_LIMIT_MAX_REQUESTS=1000
 
 # Logging
-LOG_LEVEL=info
 LOG_FILE_PATH=logs/app.log
 
 # Cache Configuration
-CACHE_TTL=3600
 CACHE_CHECK_PERIOD=600
 
 # Landbot Configuration
 LANDBOT_API_URL=https://api.landbot.io/v1
-LANDBOT_API_KEY=your-landbot-api-key
 LANDBOT_WIDGET_ID=your-landbot-widget-id
-
-# CORS Configuration
-ALLOWED_ORIGINS=http://localhost:3000,https://ecopilot.com
