--- a/package.json
+++ b/package.json
@@ -6,56 +6,63 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "jest",
+    "test": "jest --runInBand",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"src/**/*.js\""
   },
   "keywords": [
+    "co2",
+    "calculator",
     "sustainability",
     "eco-friendly",
-    "ai",
-    "gpt",
-    "airtable"
+    "carbon-footprint"
   ],
   "author": "EcoPilot Team",
   "license": "MIT",
   "dependencies": {
     "@google-analytics/data": "^3.0.0",
     "airtable": "^0.12.2",
-    "axios": "^1.6.2",
+    "axios": "^1.4.0",
     "bitly": "^7.1.2",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "csurf": "^1.11.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^7.1.5",
+    "express-rate-limit": "^6.9.0",
     "express-validator": "^7.0.1",
-    "helmet": "^7.1.0",
+    "helmet": "^7.0.0",
     "hpp": "^0.2.3",
     "ioredis": "^5.3.2",
-    "joi": "^17.11.0",
-    "jsonwebtoken": "^9.0.2",
+    "joi": "^17.10.1",
+    "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
+    "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.5",
     "openai": "^4.0.0",
     "rate-limit-redis": "^4.2.0",
+    "redis": "^4.6.8",
     "sanitize-html": "^2.11.0",
+    "socket.io": "^4.7.2",
     "uuid": "^9.0.0",
-    "winston": "^3.11.0",
+    "winston": "^3.10.0",
     "xss-clean": "^0.1.4",
     "xss": "^1.0.14"
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
+    "eslint": "^8.48.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.2",
-    "prettier": "^3.1.1",
+    "jest": "^29.6.4",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.3",
     "supertest": "^6.3.3"
   },
   "engines": {
